istio-resources/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  gateways:
    - istio-system/ops-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /kiali/
      rewrite:
        uri: "/kiali/"
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
---
