istio-resources/virtual_service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: healthservice
spec:
  gateways:
    - istio-ingressgateway
    - istio-ops-ingressgateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: /healthz/ready
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 15021
    - match:
        - uri:
            exact: /healthz/ready
      route:
        - destination:
            host: istio-ops-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 15021
---
